Moved all templates to 'startupapi' namespace

--- a/themes/awesome/templates/modules/email/edit_user_form.html.twig
+++ b/themes/awesome/templates/modules/email/edit_user_form.html.twig
@@ -1,4 +1,4 @@
-{% import 'error_messages.html.twig' as ERR %}
+{% import '@startupapi/error_messages.html.twig' as ERR %}
 <div class="page-header">
 	<h1>Update your name and email</h1>
 </div>
