--- a/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
+++ b/themes/awesome/templates/modules/usernamepass/edit_user_form.html.twig
@@ -1,4 +1,4 @@
-{% import 'error_messages.html.twig' as ERR %}
+{% import '@startupapi/error_messages.html.twig' as ERR %}
 
 <script>
 	STARTUPAPI.showMessages({
