--- a/themes/classic/templates/account/edit_account.html.twig
+++ b/themes/classic/templates/account/edit_account.html.twig
@@ -1,5 +1,5 @@
-{% extends 'page_with_sidebar.html.twig' %}
-{% import 'error_messages.html.twig' as ERR %}
+{% extends '@startupapi/page_with_sidebar.html.twig' %}
+{% import '@startupapi/error_messages.html.twig' as ERR %}
 
 {% block content %}
 	<legend>Edit Account Information / <b>{{account_name}}</b></legend>
