--- a/themes/classic/templates/modules/external_payment/external_page.html.twig
+++ b/themes/classic/templates/modules/external_payment/external_page.html.twig
@@ -1,5 +1,5 @@
-{% extends 'page.html.twig' %}
-{% import 'error_messages.html.twig' as ERR %}
+{% extends '@startupapi/page.html.twig' %}
+{% import '@startupapi/error_messages.html.twig' as ERR %}
 
 {% block content %}
 	<div class="container-fluid" style="margin-top: 1em">
