--- a/themes/classic/templates/modules/usernamepass/edit_user_form.html.twig
+++ b/themes/classic/templates/modules/usernamepass/edit_user_form.html.twig
@@ -1,4 +1,4 @@
-{% import 'error_messages.html.twig' as ERR %}
+{% import '@startupapi/error_messages.html.twig' as ERR %}
 <form class="form-horizontal" action="{{action}}" method="POST">
 	<fieldset>
 		<legend>Update your username and password</legend>
