--- a/themes/awesome/templates/page.html.twig
+++ b/themes/awesome/templates/page.html.twig
@@ -3,10 +3,10 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>{% block title %}Users - {{UserConfig.appName}}{% endblock %}</title>
-	{% include 'head_tag.html.twig' %}
+	{% include '@startupapi/head_tag.html.twig' %}
 </head>
 <body>
-{% include 'power_strip.html.twig' %}
+{% include '@startupapi/power_strip.html.twig' %}
 <!-- header ends -->
 
 {% block base %}
