--- a/themes/classic/templates/maillist.html.twig
+++ b/themes/classic/templates/maillist.html.twig
@@ -1,4 +1,4 @@
-{% extends 'page_with_sidebar.html.twig' %}
+{% extends '@startupapi/page_with_sidebar.html.twig' %}
 
 {% block content %}
 	<legend>Email preferences</legend>
