Trying to trigger reflow as hard as we can

--- a/themes/awesome/templates/power_strip.html.twig
+++ b/themes/awesome/templates/power_strip.html.twig
@@ -89,7 +89,8 @@ You can also swith navbar to "pills" mode (no navbar) by setting UserConfig::$po
 
 					// hoping to trigger repaint with a new CSS
 					setTimeout(function() {
-						$('body').height;
+						$('footer').height;
+						$('footer').width;
 					}, 1000);
 				};
 
