--- a/themes/awesome/templates/modules/google/user_info.html.twig
+++ b/themes/awesome/templates/modules/google/user_info.html.twig
@@ -1,5 +1,10 @@
-<a href="{{url}}" target="_blank">{{name}}</a>
-<br/>
-<a href="{{url}}" target="_blank">
-	<img src="{{image.url}}" title="{{name}}" style="max-width: 60px; max-height: 60px"/>
-</a>
+<div class="media">
+	<a class="media-left" href="{{url}}" target="_blank">
+		<img src="{{image.url}}" title="{{name}}" style="max-width: 100px; max-height: 100px"/>
+	</a>
+	<div class="media-body">
+		<h4 class="media-heading">
+			<a href="{{url}}" target="_blank">{{name}}</a>
+		</h4>
+	</div>
+</div>
