App icon/logo only constrained by height

--- a/themes/awesome/templates/power_strip.html.twig
+++ b/themes/awesome/templates/power_strip.html.twig
@@ -15,7 +15,7 @@ You can also swith navbar to "pills" mode (no navbar) by setting UserConfig::$po
 			</button>
 			<a class="navbar-brand" href="{{ UserConfig.SITEROOTURL }}">
 				{% if UserConfig.appIconURL %}
-					<img class="startupapi-logo" width="20" height="20" hspace="5" src="{{ UserConfig.appIconURL }}"/>
+					<img class="startupapi-logo" height="20" hspace="5" src="{{ UserConfig.appIconURL }}"/>
 				{% elseif UserConfig.appName %}
 					{{UserConfig.appName}}
 				{% else %}
