Hide "powered by" messages on smaller screens (close #196)

--- a/themes/awesome/startupapi.css
+++ b/themes/awesome/startupapi.css
@@ -43,3 +43,9 @@ footer.footer {
   width: 100%;
   /* Set the fixed height of the footer here */
 }
+
+@media (max-width: 360px) {
+	footer .startupapi-poweredby {
+		display: none;
+	}
+}
