--- a/themes/awesome/templates/page.html.twig
+++ b/themes/awesome/templates/page.html.twig
@@ -26,8 +26,10 @@
 		<ul class="nav navbar-nav pull-right">
 			<li>
 				<a href="http://www.startupapi.com/" target="_blank">
-					<img class="startupapi-logo" width="20" height="20" hspace="5" src="{{ UserConfig.USERSROOTURL }}/images/header_icon.png"/>
-					Powered by Startup API
+					<img class="startupapi-logo" width="20" height="20" hspace="5" src="{{ UserConfig.USERSROOTURL }}/images/header_icon.png" title="Powered by Startup API"/>
+					<span class="startupapi-poweredby">
+						Powered by Startup API
+					</span>
 				</a>
 			</li>
 		</ul>
