--- a/themes/classic/templates/page.html.twig
+++ b/themes/classic/templates/page.html.twig
@@ -4,6 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>{% block title %}Users - {{UserConfig.appName}}{% endblock %}</title>
 	{% include '@startupapi/head_tag.html.twig' %}
+	{% block head %}{% endblock %}
 </head>
 
 <body>
