Fixes envelop icon on invitations page

--- a/themes/awesome/templates/invitations.html.twig
+++ b/themes/awesome/templates/invitations.html.twig
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 		{% endif %}
-		<button class="btn btn-primary" name="send"><i class="glyphicon glyphicon-envelope icon-envelope"></i> Send invitation</button>
+		<button class="btn btn-primary" name="send"><i class="glyphicon glyphicon-envelope"></i> Send invitation</button>
 		<input type="hidden" name="CSRF_NONCE" value="{{ AUTH.CSRF_NONCE }}"/>
 	</form>
 	</div>
