--- a/themes/awesome/templates/modules/facebook/edit_user_form.html.twig
+++ b/themes/awesome/templates/modules/facebook/edit_user_form.html.twig
@@ -11,7 +11,7 @@
 		<div class="panel-body">
 			<div class="media">
 				<a class="media-left" href="{{me.link}}" target="_blank">
-					<img src="http://graph.facebook.com/{{fb_id}}/picture" style="border: 0; max-width: 100px; max-height: 100px" title="{{me.name}}">
+					<img src="https://graph.facebook.com/{{fb_id}}/picture" style="border: 0; max-width: 100px; max-height: 100px" title="{{me.name}}">
 				</a>
 				<div class="media-body">
 					<h4 class="media-heading"><a href="{{me.link}}" target="_blank">{{me.name}}</a></h4>
