Added proper facebook profile link

--- a/themes/awesome/templates/modules/facebook/credentials.html.twig
+++ b/themes/awesome/templates/modules/facebook/credentials.html.twig
@@ -1,1 +1,1 @@
-<a href="http://www.facebook.com/{{fb_id}}">{{fb_id}}</a>
+{% if fb_link %}<a href="{{fb_link}}">{{fb_id}}</a>{% else %}{{fb_id}}{% endif %}
