Moved bootstrap4 out. Made power strip HTML static

--- a/themes/amazing/templates/power_strip.html.twig
+++ b/themes/amazing/templates/power_strip.html.twig
@@ -1,27 +1,3 @@
 <!-- Power Strip START -->
-<ul class="navbar-nav d-flex justify-content-end">
-{% if AUTH.current_user.is_logged_in %}
-	{% if AUTH.current_user.is_admin %}
-		<li class="nav-item"><a class="nav-link" id="startupapi-navbox-admin" href="{{ UserConfig.USERSROOTURL }}/admin/">Admin</a></li>
-	{% endif %}
-	{% for link in PAGE.extralinks %}
-		<li class="nav-item" {% if link.id %} id="{{ link.id }}"{% endif %}>
-			<a class="nav-link" href="{{ link.url }}"
-				{% if link.title %}
-					title="{{ link.title }}"
-				{% endif %}
-				{% if link.target %}
-					target="{{ link.target }}"
-				{% endif %}
-			>{{ link.text }}</a>
-		</li>
-	{% endfor %}
-
-	<li id="startupapi-navbox-username" class="nav-item"><a class="nav-link" href="{{ UserConfig.USERSROOTURL }}/edit.php" title="{{ AUTH.current_user.name }}'s user information">{{ AUTH.current_user.name }}</a></li>
-	<li id="startupapi-navbox-logout" class="nav-item"><a class="nav-link" href="{{ UserConfig.USERSROOTURL }}/logout.php">Logout</a></li>
-{% else %}
-	<li id="startupapi-navbox-signup" class="nav-item"><a class="nav-link" href="{{ UserConfig.USERSROOTURL }}/register.php">Sign Up</a></li>
-	<li id="startupapi-navbox-login" class="nav-item"><a class="nav-link" href="{{ UserConfig.USERSROOTURL }}/login.php">Log in</a></li>
-{% endif %}
-</ul>
+<div id="startupapi-power-strip"/>
 <!-- Power Strip END -->
