--- a/themes/awesome/templates/modules/google/user_info.html.twig
+++ b/themes/awesome/templates/modules/google/user_info.html.twig
@@ -1,6 +1,6 @@
 <div class="media">
 	<a class="media-left" href="{{url}}" target="_blank">
-		<img src="{{image.url}}" title="{{name}}" style="max-width: 100px; max-height: 100px"/>
+		<img src="{{picture}}" title="{{name}}" style="max-width: 100px; max-height: 100px"/>
 	</a>
 	<div class="media-body">
 		<h4 class="media-heading">
